--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <div class="button">-</div>
         </div>
         <div class="row">
+            <div class="button">+</div>
             <div class="button">0</div>
             <div class="button">C</div>
             <div class="button equals">=</div>
